[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu/main/title.png" type="Texture" id=1]
[ext_resource path="res://menu/main/splash_text.gd" type="Script" id=2]
[ext_resource path="res://menu/main/main_menu.gd" type="Script" id=3]
[ext_resource path="res://menu/main/dark_dirt.png" type="Texture" id=4]
[ext_resource path="res://menu/options/options.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/theme/theme.tres" type="Theme" id=6]
[ext_resource path="res://menu/button.png" type="Texture" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="CenterContainer" parent="TitleScreen"]
margin_right = 1600.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Logo" type="TextureRect" parent="TitleScreen/Logo"]
margin_left = 432.0
margin_top = 110.0
margin_right = 1168.0
margin_bottom = 190.0
texture = ExtResource( 1 )

[node name="SplashHolder" type="Control" parent="TitleScreen/Logo/Logo"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashText" type="Label" parent="TitleScreen/Logo/Logo/SplashHolder"]
modulate = Color( 1, 1, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -110.0
margin_top = 10.0
margin_right = -110.0
margin_bottom = 12.0
rect_rotation = -20.0
text = "Made in Godot!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="HBoxContainer" parent="TitleScreen"]
margin_top = 304.0
margin_right = 1600.0
margin_bottom = 680.0
size_flags_vertical = 3
alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="TitleScreen/ButtonHolder"]
margin_left = 608.0
margin_right = 992.0
margin_bottom = 376.0
custom_constants/separation = 20
alignment = 1

[node name="Start" type="TextureButton" parent="TitleScreen/ButtonHolder/MainButtons"]
margin_top = 72.0
margin_right = 384.0
margin_bottom = 136.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="TitleScreen/ButtonHolder/MainButtons/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Start Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="TitleScreen/ButtonHolder/MainButtons"]
margin_top = 156.0
margin_right = 384.0
margin_bottom = 220.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="TitleScreen/ButtonHolder/MainButtons/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="TitleScreen/ButtonHolder/MainButtons"]
margin_top = 240.0
margin_right = 384.0
margin_bottom = 304.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="TitleScreen/ButtonHolder/MainButtons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Exit Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="TitleScreen"]
margin_top = 684.0
margin_right = 1600.0
margin_bottom = 900.0
rect_min_size = Vector2( 0, 216 )

[node name="StartGame" type="HBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButtons" type="VBoxContainer" parent="StartGame"]
margin_left = 608.0
margin_right = 992.0
margin_bottom = 900.0
custom_constants/separation = 20
alignment = 1

[node name="Spacer" type="Control" parent="StartGame/StartButtons"]
margin_top = 292.0
margin_right = 384.0
margin_bottom = 356.0
rect_min_size = Vector2( 0, 64 )

[node name="RandomBlocks" type="TextureButton" parent="StartGame/StartButtons"]
margin_top = 376.0
margin_right = 384.0
margin_bottom = 440.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="StartGame/StartButtons/RandomBlocks"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Random Blocks"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlatGrass" type="TextureButton" parent="StartGame/StartButtons"]
margin_top = 460.0
margin_right = 384.0
margin_bottom = 524.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="StartGame/StartButtons/FlatGrass"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Flat Grass"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToTitle" type="TextureButton" parent="StartGame/StartButtons"]
margin_top = 544.0
margin_right = 384.0
margin_bottom = 608.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="StartGame/StartButtons/BackToTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="TitleScreen/ButtonHolder/MainButtons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="TitleScreen/ButtonHolder/MainButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="TitleScreen/ButtonHolder/MainButtons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="StartGame/StartButtons/RandomBlocks" to="." method="_on_RandomBlocks_pressed"]
[connection signal="pressed" from="StartGame/StartButtons/FlatGrass" to="." method="_on_FlatGrass_pressed"]
[connection signal="pressed" from="StartGame/StartButtons/BackToTitle" to="." method="_on_BackToTitle_pressed"]
